--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,15 @@
   <base href="/">
   {{content-for 'head'}}
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+
+html,
+body {
+  background: whitesmoke;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 200;
+}
+  </style>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Service worker support is disabled by default.
